Compressed image version

--- a/about-us.html
+++ b/about-us.html
@@ -16,14 +16,14 @@
 <body>
     <nav>
         <div class="wrapper">
-            <label for="chk-box"><i class="fa-solid fa-bars"></i></label>
-            <input type="checkbox" name="hamburger" id="chk-box">
             <h1><a href="./index.html">UNIMATE</a></h1>
-            <ul>
-                <li><a href="./index.html" class="nav-heading">Home</a></li>
-                <li><a href="#" class="nav-heading  active">Categories</a></li>
-                <li><a href="./about-us.html" class="nav-heading">About us</a></li>
-            </ul>
+            <div class="link">
+                <ul>
+                    <li><a href="./index.html" class="nav-heading">Home</a></li>
+                    <li><a href="./categories.html" class="nav-heading">Categories</a></li>
+                    <li><a href="#" class="nav-heading active">About us</a></li>
+                </ul>
+            </div>
             <div class="icon">
                 <i class="fa-solid fa-cart-shopping"></i>
                 <i class="fa-solid fa-user"></i>
