--- a/about-us.html
+++ b/about-us.html
@@ -21,8 +21,8 @@
             <h1><a href="./index.html">UNIMATE</a></h1>
             <ul>
                 <li><a href="./index.html" class="nav-heading">Home</a></li>
-                <li><a href="#" class="nav-heading  active">Categories</a></li>
-                <li><a href="./about-us.html" class="nav-heading">About us</a></li>
+                <li><a href="./categories.html" class="nav-heading  active">Categories</a></li>
+                <li><a href="#" class="nav-heading">About us</a></li>
             </ul>
             <div class="icon">
                 <i class="fa-solid fa-cart-shopping"></i>
