--- a/about-us.html
+++ b/about-us.html
@@ -20,13 +20,13 @@
             <input type="checkbox" name="hamburger" id="chk-box">
             <h1><a href="./index.html">UNIMATE</a></h1>
             <ul>
-                <li><a href="./index.html" class="nav-heading">Home</a></li>
+                <li><a href="#" class="nav-heading active">Home</a></li>
                 <li><a href="./categories.html" class="nav-heading">Categories</a></li>
-                <li><a href="#" class="nav-heading active">About us</a></li>
+                <li><a href="./about-us.html" class="nav-heading">About us</a></li>
             </ul>
             <div class="icon">
-                <i class="fa-solid fa-cart-shopping"></i>
-                <i class="fa-solid fa-user"></i>
+                <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href=""><i class="fa-solid fa-user"></i></a>
             </div>
         </div>
     </nav>
@@ -251,6 +251,7 @@
                 </div>
                 <div class="copyright">
                     <h1 class="copyright-h1">Copyright © 2024 | UNIMATE</h1>
+                    <h1 class="copyright-h1"><a href="https://sandeep2912v.github.io/My-Resume/" target="_blank">Designed by SANDEEP</a></h1>
                 </div>
             </div>
         </div>
