--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <li><a href="./about-us.html" class="nav-heading">About us</a></li>
             </ul>
             <div class="icon">
-                <i class="fa-solid fa-cart-shopping"></i>
-                <i class="fa-solid fa-user"></i>
+                <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href=""><i class="fa-solid fa-user"></i></a>
             </div>
         </div>
     </nav>
@@ -217,6 +217,7 @@
                 </div>
                 <div class="copyright">
                     <h1 class="copyright-h1">Copyright © 2024 | UNIMATE</h1>
+                    <h1 class="copyright-h1"><a href="https://sandeep2912v.github.io/My-Resume/" target="_blank">Designed by SANDEEP</a></h1>
                 </div>
             </div>
         </div>
