--- a/categories.html
+++ b/categories.html
@@ -20,8 +20,8 @@
             <input type="checkbox" name="hamburger" id="chk-box">
             <h1><a href="./index.html">UNIMATE</a></h1>
             <ul>
-                <li><a href="#" class="nav-heading active">Home</a></li>
-                <li><a href="./categories.html" class="nav-heading">Categories</a></li>
+                <li><a href="./index.html" class="nav-heading">Home</a></li>
+                <li><a href="#" class="nav-heading active">Categories</a></li>
                 <li><a href="./about-us.html" class="nav-heading">About us</a></li>
             </ul>
             <div class="icon">
