Updated version after correction

--- a/categories.html
+++ b/categories.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Categories</title>
+    <title>Unimate-Categories</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/categories.css">
     <meta charset="UTF-8">
@@ -42,30 +42,38 @@
         <div class="wrapper">
             <h1>--- SHOP BY CATEGORIES ---</h1>
             <div class="categories-container">
-                <h1>View More --></h1>
+                <h1>View More &nbsp;<i class="fa-solid fa-arrow-right-long"></i></h1>
                 <div class="categories-card-container">
                     <div class="categories-card">
                         <div class="image">
                             <img src="./images/categories/category/boy.jpg" alt="Boy Image">
                         </div>
-                        <h1>Uniform for Boys</h1>
-                        <button class="button"><a href="#">Buy Now</a></button>
+                        <div class="text">
+                            <h1>Uniform for Boys</h1>
+                            <button class="button"><a href="#">Buy Now</a></button>
+                        </div>
+                        
                     </div>
 
                     <div class="categories-card">
                         <div class="image">
                             <img src="./images/categories/category/accessories.jpg" alt="Accessories Image">
                         </div>
-                        <h1>Accessories</h1>
-                        <button class="button"><a href="#">Buy Now</a></button>
+                        <div class="text">
+                            <h1>Accessories</h1>
+                            <button class="button"><a href="#">Buy Now</a></button>
+                        </div>
                     </div>
 
                     <div class="categories-card">
                         <div class="image">
                             <img src="./images/categories/category/girl.jpg" alt="Girl Image">
                         </div>
-                        <h1>Uniform for Girls</h1>
-                        <button class="button"><a href="#">Buy Now</a></button>
+                        <div class="text">
+                            <h1>Uniform for Girls</h1>
+                            <button class="button"><a href="#">Buy Now</a></button>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -76,7 +84,7 @@
         <div class="wrapper">
             <h1>--- UNIFORM CATEGORIES ---</h1>
             <div class="uniform-categories-container">
-                <h1>View More --></h1>
+                <h1>View More &nbsp;<i class="fa-solid fa-arrow-right-long"></i></h1>
                 <div class="uniform-categories-card-container">
                     <div class="uniform-categories-card">
                         <div class="image">
@@ -136,7 +144,7 @@
         <div class="wrapper">
             <h1>--- SHOES ---</h1>
             <div class="shoe-container">
-                <h1>View More --></h1>
+                <h1>View More &nbsp;<i class="fa-solid fa-arrow-right-long"></i></h1>
                 <div class="shoe-card-container">
                     <div class="shoe-card">
                         <div class="image">
@@ -186,7 +194,7 @@
         <div class="wrapper">
             <h1>--- ACCESSORIES ---</h1>
             <div class="accessories-container">
-                <h1>View More --></h1>
+                <h1>View More &nbsp;<i class="fa-solid fa-arrow-right-long"></i></h1>
                 <div class="accessories-card-container">
                     <div class="accessories-card">
                         <div class="image">
@@ -243,21 +251,21 @@
                 </div>
                 <div class="content">
                     <ul>
-                        <li><a href="#">Company</a></li>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Carreres</a></li>
+                        <li>Company</li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./about-us.html">About us</a></li>
+                        <li><a href="./categories.html">Categories</a></li>
+                        <li><a href="#">Career</a></li>
                     </ul>
                     <ul>
-                        <li><a href="#">Support</a></li>
+                        <li>Support</li>
                         <li><a href="#">FAQ's</a></li>
                         <li><a href="#">Contact us</a></li>
                         <li><a href="#">Help Center</a></li>
                         <li><a href="#">Return Policy</a></li>
                     </ul>
                     <ul>
-                        <li><a href="#">Service</a></li>
+                        <li>Service</li>
                         <li><a href="#">Virtual Fitting</a></li>
                         <li><a href="#">Custom Uniforms</a></li>
                         <li><a href="#">Delivery Options</a></li>
@@ -270,19 +278,20 @@
                         <a href="https://www.facebook.com/login/?privacy_mutation_token=eyJ0eXBlIjowLCJjcmVhdGlvbl90aW1lIjoxNzMwNzg3MjE5LCJjYWxsc2l0ZV9pZCI6MjY5NTQ4NDUzMDcyMDk1MX0%3D&locale=en_GB" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                         <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://x.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="https://wa.me/6374474220" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                     </div>
                 </div>
             </div>
             <div class="part-two">
                 <div class="address">
-                    <h1 class="address-h1"><a href="https://wa.me/6374474220" target="_blank">Phone: +91 12345 67890</a></h1>
-                    <h1 class="address-h1">Address: 123 Tailor Street, New Delhi, India</h1>
-                    <h1 class="address-h1"><a href="mailto:sandeep2912v@gmail.com" target="_blank">Email: support@unimate.com</a></h1>
+                    <h1 class="address-h1"><a href="tel:+916374474220" target="_blank">Phone: +91 63744 74220</a>
+                    </h1>
+                    <h1 class="address-h1"><a href="https://maps.app.goo.gl/ZVLu4o51nHDURvTx8" target="_blank">Address: 123 Tailor Street, New Delhi, India</a></h1>
+                    <h1 class="address-h1"><a href="mailto:sandeep2912v@gmail.com" target="_blank">Email: sandeep2912v@gmail.com</a></h1>
                 </div>
                 <div class="copyright">
                     <h1 class="copyright-h1">Copyright © 2024 | UNIMATE</h1>
-                    <h1 class="copyright-h1"><a href="https://sandeep2912v.github.io/My-Resume/" target="_blank">Designed by SANDEEP</a></h1>
+                    <h1 class="copyright-h1"><a href="https://sandeep2912v.github.io/My-Resume/" target="_blank">Designed & Developed by SANDEEP</a></h1>
                 </div>
             </div>
         </div>
