--- a/about-us.html
+++ b/about-us.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>About us</title>
+    <title>Unimate-About us</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/about-us.css">
     <meta charset="UTF-8">
@@ -207,22 +207,31 @@
 
                 </div>
                 <div class="content">
+                    <!-- <div class="company-links footer-links">
+                        <h3>Company</h3>
+                        <ul>
+                            <li>LINK</li>
+                            <li>LINK</li>
+                            <li>LINK</li>
+                            <li>LINK</li>
+                        </ul>
+                    </div> -->
                     <ul>
-                        <li><a href="#">Company</a></li>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Carreres</a></li>
+                        <li>Company</li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./about-us.html">About us</a></li>
+                        <li><a href="./categories.html">Categories</a></li>
+                        <li><a href="#">Career</a></li>
                     </ul>
                     <ul>
-                        <li><a href="#">Support</a></li>
+                        <li>Support</li>
                         <li><a href="#">FAQ's</a></li>
                         <li><a href="#">Contact us</a></li>
                         <li><a href="#">Help Center</a></li>
                         <li><a href="#">Return Policy</a></li>
                     </ul>
                     <ul>
-                        <li><a href="#">Service</a></li>
+                        <li>Service</li>
                         <li><a href="#">Virtual Fitting</a></li>
                         <li><a href="#">Custom Uniforms</a></li>
                         <li><a href="#">Delivery Options</a></li>
@@ -237,21 +246,20 @@
                         <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank"><i
                                 class="fa-brands fa-instagram"></i></a>
                         <a href="https://x.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="https://wa.me/6374474220" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                     </div>
                 </div>
             </div>
             <div class="part-two">
                 <div class="address">
-                    <h1 class="address-h1"><a href="https://wa.me/6374474220" target="_blank">Phone: +91 12345 67890</a>
+                    <h1 class="address-h1"><a href="tel:+916374474220" target="_blank">Phone: +91 63744 74220</a>
                     </h1>
-                    <h1 class="address-h1">Address: 123 Tailor Street, New Delhi, India</h1>
-                    <h1 class="address-h1"><a href="mailto:sandeep2912v@gmail.com" target="_blank">Email:
-                            support@unimate.com</a></h1>
+                    <h1 class="address-h1"><a href="https://maps.app.goo.gl/ZVLu4o51nHDURvTx8" target="_blank">Address: 123 Tailor Street, New Delhi, India</a></h1>
+                    <h1 class="address-h1"><a href="mailto:sandeep2912v@gmail.com" target="_blank">Email: sandeep2912v@gmail.com</a></h1>
                 </div>
                 <div class="copyright">
                     <h1 class="copyright-h1">Copyright © 2024 | UNIMATE</h1>
-                    <h1 class="copyright-h1"><a href="https://sandeep2912v.github.io/My-Resume/" target="_blank">Designed by SANDEEP</a></h1>
+                    <h1 class="copyright-h1"><a href="https://sandeep2912v.github.io/My-Resume/" target="_blank">Designed & Developed by SANDEEP</a></h1>
                 </div>
             </div>
         </div>
