--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Home</title>
+    <title>Unimate-Home</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/index.css">
     <meta charset="UTF-8">
@@ -175,10 +175,10 @@
                 <div class="content">
                     <ul>
                         <li>Company</li>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Carreres</a></li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./about-us.html">About us</a></li>
+                        <li><a href="./categories.html">Categories</a></li>
+                        <li><a href="#">Career</a></li>
                     </ul>
                     <ul>
                         <li>Support</li>
@@ -203,21 +203,20 @@
                         <a href="https://www.instagram.com/accounts/login/?hl=en" target="_blank"><i
                                 class="fa-brands fa-instagram"></i></a>
                         <a href="https://x.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="https://wa.me/6374474220" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
                     </div>
                 </div>
             </div>
             <div class="part-two">
                 <div class="address">
-                    <h1 class="address-h1"><a href="https://wa.me/6374474220" target="_blank">Phone: +91 12345 67890</a>
+                    <h1 class="address-h1"><a href="tel:+916374474220" target="_blank">Phone: +91 63744 74220</a>
                     </h1>
-                    <h1 class="address-h1">Address: 123 Tailor Street, New Delhi, India</h1>
-                    <h1 class="address-h1"><a href="mailto:sandeep2912v@gmail.com" target="_blank">Email:
-                            support@unimate.com</a></h1>
+                    <h1 class="address-h1"><a href="https://maps.app.goo.gl/ZVLu4o51nHDURvTx8" target="_blank">Address: 123 Tailor Street, New Delhi, India</a></h1>
+                    <h1 class="address-h1"><a href="mailto:sandeep2912v@gmail.com" target="_blank">Email: sandeep2912v@gmail.com</a></h1>
                 </div>
                 <div class="copyright">
                     <h1 class="copyright-h1">Copyright © 2024 | UNIMATE</h1>
-                    <h1 class="copyright-h1"><a href="https://sandeep2912v.github.io/My-Resume/" target="_blank">Designed by SANDEEP</a></h1>
+                    <h1 class="copyright-h1"><a href="https://sandeep2912v.github.io/My-Resume/" target="_blank">Designed & Developed by SANDEEP</a></h1>
                 </div>
             </div>
         </div>
